--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -128,6 +128,22 @@
           tools:text="Rp 24.000" />
     </LinearLayout>
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_select_car"
+        style="@style/MwmWidget.Button.Primary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Pilih Mobil" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_select_motorcycle"
+        style="@style/MwmWidget.Button.Primary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Pilih Motor" />
+
   </LinearLayout>
   <com.google.android.material.button.MaterialButton
       android:id="@+id/confirm_pickup_button"
