--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -154,7 +154,7 @@
       android:layout_marginHorizontal="@dimen/margin_base"
       android:layout_marginBottom="@dimen/margin_base"
       android:elevation="12dp"
-      android:text="Choose This Pickup"
+      android:text="Choose This Destination"
       android:visibility="gone"
       tools:visibility="visible" />
 
