--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -157,5 +157,16 @@
       android:text="@string/choose_this_destination"
       android:visibility="gone"
       tools:visibility="visible" />
+  <FrameLayout
+      android:id="@+id/routing_progress_overlay"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:background="#80000000"
+      android:visibility="gone">
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+  </FrameLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
