--- a/app/src/main/res/layout/routing_plan.xml
+++ b/app/src/main/res/layout/routing_plan.xml
@@ -28,7 +28,7 @@
             android:layout_width="?attr/actionBarSize"
             android:layout_height="?attr/actionBarSize"
             android:layout_alignParentStart="true"
-            android:background="?attr/selectableItemBackgroundBorderless"
+            android:background="@drawable/bg_back_button"
             app:srcCompat="?homeAsUpIndicator"
             android:scaleType="center"
             tools:src="@drawable/ic_down" />
@@ -38,7 +38,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
           <app.organicmaps.widget.RoutingToolbarButton
               android:id="@+id/vehicle"
@@ -89,6 +90,7 @@
           android:layout_alignStart="@id/route_type"
           android:layout_centerInParent="true"
           android:orientation="horizontal"
+          android:visibility="gone"
           tools:background="#80FF0000">
 
           <app.organicmaps.widget.WheelProgressView
