--- a/app/src/main/res/drawable/bg_option_button.xml
+++ b/app/src/main/res/drawable/bg_option_button.xml
@@ -1,9 +1,23 @@
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="?colorControlHighlight">
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="?colorSurface" />
-            <corners android:radius="8dp" />
-        </shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_selected="true">
+        <ripple android:color="?colorControlHighlight">
+            <item>
+                <shape android:shape="rectangle">
+                    <solid android:color="?colorSurface" />
+                    <stroke android:width="2dp" android:color="@color/base_green" />
+                    <corners android:radius="8dp" />
+                </shape>
+            </item>
+        </ripple>
     </item>
-</ripple>
+    <item>
+        <ripple android:color="?colorControlHighlight">
+            <item>
+                <shape android:shape="rectangle">
+                    <solid android:color="?colorSurface" />
+                    <corners android:radius="8dp" />
+                </shape>
+            </item>
+        </ripple>
+    </item>
+</selector>
