--- a/app/src/main/res/layout/routing_plan.xml
+++ b/app/src/main/res/layout/routing_plan.xml
@@ -17,16 +17,17 @@
       android:theme="@style/MwmWidget.ToolbarTheme"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:elevation="0dp">
+      android:elevation="0dp"
+      android:background="@android:color/transparent">
 
       <RelativeLayout
           android:layout_width="match_parent"
-          android:layout_height="?attr/actionBarSize">
+          android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/back"
-            android:layout_width="?attr/actionBarSize"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentStart="true"
             android:background="@drawable/bg_back_button"
             app:srcCompat="?homeAsUpIndicator"
