--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -73,6 +73,8 @@
       android:layout_gravity="bottom"
       android:background="?colorSurface"
       android:orientation="vertical"
+      android:clickable="true"
+      android:focusable="true"
       android:elevation="12dp"
       android:padding="16dp"
       android:visibility="gone"
