--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -29,6 +29,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <ImageButton
+        android:id="@+id/pickup_back_button"
+        android:layout_width="@dimen/map_button_size"
+        android:layout_height="@dimen/map_button_size"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="@dimen/margin_base"
+        android:background="@drawable/bg_circle_translucent"
+        android:contentDescription="@string/back"
+        android:padding="8dp"
+        android:visibility="gone"
+        app:srcCompat="?attr/homeAsUpIndicator" />
+
     <include
         android:id="@+id/position_chooser"
         layout="@layout/position_chooser" />
