--- a/app/src/main/res/layout-land/map_buttons_layout_regular.xml
+++ b/app/src/main/res/layout-land/map_buttons_layout_regular.xml
@@ -17,11 +17,10 @@
     android:clipChildren="false"
     android:clipToPadding="false"
     android:padding="@dimen/nav_frame_padding">
-    <include
-      layout="@layout/map_buttons_layers"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_alignParentBottom="true"
+    <ImageButton
+      android:id="@+id/pickup_back_button"
+      style="@style/MwmWidget.MapButton"
+      app:srcCompat="?attr/homeAsUpIndicator"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
   </androidx.constraintlayout.widget.ConstraintLayout>
