--- a/app/src/main/res/layout/map_buttons_layout_planning.xml
+++ b/app/src/main/res/layout/map_buttons_layout_planning.xml
@@ -8,6 +8,10 @@
   android:clipChildren="false"
   android:clipToPadding="false"
   tools:background="@color/bg_primary">
+  <include
+    layout="@layout/map_buttons_back"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" />
   <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/map_buttons_inner_left"
     android:layout_width="wrap_content"
