--- a/app/src/main/res/layout/map_buttons_layout_regular.xml
+++ b/app/src/main/res/layout/map_buttons_layout_regular.xml
@@ -15,14 +15,11 @@
     android:layout_alignParentTop="true"
     android:layout_alignParentLeft="true"
     android:clipChildren="false"
-    android:clipToPadding="false"
-    android:padding="@dimen/nav_frame_padding">
-    <ImageButton
-      android:id="@+id/pickup_back_button"
-      style="@style/MwmWidget.MapButton"
-      app:srcCompat="?attr/homeAsUpIndicator"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+    android:clipToPadding="false">
+    <include
+      layout="@layout/map_buttons_back"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content" />
   </androidx.constraintlayout.widget.ConstraintLayout>
   <include
     layout="@layout/map_status_track_recording"
