--- a/app/src/main/res/layout/map_buttons_back.xml
+++ b/app/src/main/res/layout/map_buttons_back.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.floatingactionbutton.FloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/pickup_back_button"
     style="@style/MwmWidget.MapButton"
     android:layout_width="@dimen/map_button_size"
     android:layout_height="@dimen/map_button_size"
-    android:layout_margin="@dimen/nav_frame_padding"
+    android:layout_marginStart="@dimen/margin_compass"
+    android:layout_marginTop="@dimen/margin_compass_top"
     app:srcCompat="?attr/homeAsUpIndicator"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    app:layout_constraintTop_toTopOf="parent"
+    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Button.Round" />
