--- a/app/src/main/res/layout/activity_mesh_debug.xml
+++ b/app/src/main/res/layout/activity_mesh_debug.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
   <LinearLayout
       android:orientation="vertical"
@@ -8,51 +9,103 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
 
-    <!-- Baris status peer id -->
+    <!-- Start / Stop -->
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+      <Button
+          android:id="@+id/btnStart"
+          android:text="Start Mesh"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_weight="1" />
+      <Button
+          android:id="@+id/btnStop"
+          android:text="Stop Mesh"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_weight="1" />
+    </LinearLayout>
+
+    <!-- My Peer ID + Copy -->
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:paddingBottom="8dp">
-
+        android:layout_marginTop="8dp">
       <TextView
           android:id="@+id/txtMyPeerId"
+          android:text="My Peer ID: -"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
-          android:text="My Peer ID: -"
-          android:textSize="14sp"
-          android:ellipsize="end"
-          android:maxLines="1" />
-
+          android:paddingEnd="8dp" />
       <Button
           android:id="@+id/btnCopyPeerId"
+          android:text="Copy"
           android:layout_width="wrap_content"
+          android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <!-- Channel message -->
+    <EditText
+        android:id="@+id/edtChannelText"
+        android:hint="Channel text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/btnSendChannel"
+        android:text="Send Channel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <!-- Private message -->
+    <EditText
+        android:id="@+id/edtPeerId"
+        android:hint="Peer ID"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <EditText
+        android:id="@+id/edtPrivateText"
+        android:hint="Private text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/btnSendPrivate"
+        android:text="Send Private"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <!-- Test buttons -->
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+      <Button
+          android:id="@+id/btnSendBR1"
+          android:text="Send BR1"
+          android:layout_width="0dp"
           android:layout_height="wrap_content"
-          android:text="Copy"/>
+          android:layout_weight="1" />
+      <Button
+          android:id="@+id/btnSendRP1"
+          android:text="Send RP1"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_weight="1" />
+      <Button
+          android:id="@+id/btnSendCF1"
+          android:text="Send CF1"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_weight="1" />
     </LinearLayout>
 
-    <LinearLayout android:orientation="horizontal"
-        android:layout_width="match_parent" android:layout_height="wrap_content">
-      <Button android:id="@+id/btnStart" android:text="Start Mesh" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
-      <Button android:id="@+id/btnStop" android:text="Stop Mesh" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
-    </LinearLayout>
-
-    <EditText android:id="@+id/edtChannelText" android:hint="Channel text" android:layout_width="match_parent" android:layout_height="wrap_content"/>
-    <Button android:id="@+id/btnSendChannel" android:text="Send Channel" android:layout_width="match_parent" android:layout_height="wrap_content"/>
-
-    <EditText android:id="@+id/edtPeerId" android:hint="Peer ID" android:layout_width="match_parent" android:layout_height="wrap_content"/>
-    <EditText android:id="@+id/edtPrivateText" android:hint="Private text" android:layout_width="match_parent" android:layout_height="wrap_content"/>
-    <Button android:id="@+id/btnSendPrivate" android:text="Send Private" android:layout_width="match_parent" android:layout_height="wrap_content"/>
-
-    <LinearLayout android:orientation="horizontal"
-        android:layout_width="match_parent" android:layout_height="wrap_content">
-      <Button android:id="@+id/btnSendBR1" android:text="Send BR1" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
-      <Button android:id="@+id/btnSendRP1" android:text="Send RP1" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
-      <Button android:id="@+id/btnSendCF1" android:text="Send CF1" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
-    </LinearLayout>
-
-    <ListView android:id="@+id/listIncoming" android:layout_width="match_parent" android:layout_height="400dp"/>
+    <!-- Incoming list -->
+    <ListView
+        android:id="@+id/listIncoming"
+        android:layout_width="match_parent"
+        android:layout_height="400dp" />
   </LinearLayout>
 </ScrollView>
