--- a/app/src/main/res/layout/activity_mesh_debug.xml
+++ b/app/src/main/res/layout/activity_mesh_debug.xml
@@ -61,6 +61,10 @@
         android:layout_height="wrap_content" />
 
     <!-- Private message -->
+    <Spinner
+        android:id="@+id/spnPeers"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <EditText
         android:id="@+id/edtPeerId"
         android:hint="Peer ID"
